# speech_spoof_bench

./: .gitignore  README.md  implementation-notes.md  pyproject.toml
.github/workflows/: nightly-revalidate.yml  post-merge-badge.yml  preview-manifest.yml  verify-hf-pr.yml
docs/: README.md
docs/architecture/: arena.md  badges.md  cicd.md  overview.md  package.md  submission-lifecycle.md  versioning.md
docs/developing/: arena-dev.md  contributing-package.md  maintainer-runbook.md  new-dataset.md  new-metric.md  new-model.md  setup.md  testing-and-pitfalls.md
docs/plans/: 2026-05-20-phase-1-asvspoof2019-la-v4.md  2026-05-21-phase-2-pip-skeleton.md  2026-05-21-phase-3-first-submission.md  2026-05-21-phase-4-manifest.md  2026-05-21-phase-5-arena-mvp-notes.md  2026-05-21-phase-5-arena-mvp.md  2026-05-23-phase-8-cicd.md  (+9 more)
tests/: conftest.py  test_badge_build_paste_comment.py  test_badge_build_result_yaml.py  test_badge_color.py  test_badge_result_schema.py  test_benchmark.py  test_cli.py  test_cli_ci_post_merge_badge.py  test_cli_emit_labels.py  test_cli_reproduce.py  test_cli_validate_dataset.py  test_hf_fetch.py  test_labels.py  test_loader.py  test_local_registry.py  test_manifest.py  test_manifest_schema_ranking.py  test_model.py  test_reproduce.py  test_reproduce_integration.py  test_runner.py  test_scaffold.py  test_submission.py  test_submission_schema.py  test_submission_schema_empty_reproduction.py  test_submit_meta.py  test_submit_one.py  test_submit_payload.py  test_submit_pr.py  test_submit_upload.py  test_validate_dataset.py  test_validate_submission.py
(+75 files in other folders)
