[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-spoof-bench"
version = "0.1.0"
description = "Benchmark harness for speech anti-spoofing models."
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "SpeechAntiSpoofingBenchmarks maintainers"}]
dependencies = [
    "datasets>=2.18",
    "huggingface_hub>=0.20",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
speech-spoof-bench = "speech_spoof_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.package-data]
"speech_spoof_bench.schema" = ["*.json"]
